Fixing height on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,7 @@ body{
     background-color: gray;
     min-width: 100%;
     max-width: 600px;
+    height: 100%;
 }
 
 header{
